--- a/samples/app/android/build.gradle
+++ b/samples/app/android/build.gradle
@@ -47,3 +47,9 @@ dependencyLocking {
     lockAllConfigurations()
 }
 
+externalNativeBuild {
+    cmake {
+        cppFlags "-std=c++17 -Wno-c++17-extensions"
+    }
+}
+
